--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <header>
                     <h1>Hi. I'm <strong>Tahseen Hameed</strong>.</h1>
                 </header>
-                <p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+                <p>*Cool things about Me*</p>
+                <!--p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p-->
                 <!--a href="#work" class="button large scrolly">Learn about what I do</a-->
             </div>
         </div>
@@ -44,37 +45,39 @@
 <!-- education -->
 <article id="education" class="wrapper style2">
     <div class="container">
-        <header>
+        <!--header>
             <h2>Here's all the stuff I do.</h2>
             <p>Odio turpis amet sed consequat eget posuere consequat.</p>
-        </header>
+        </header-->
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="icon featured fa-comments"></span>
-                    <h3>Consequat lorem</h3>
-                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+                    <!--span class="icon featured fa-comments"></span-->
+                    <h3>Masters in Computer Science</h3>
+                    <h4>Northeastern University, Boston</h4>
+                    <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="icon solid featured fa-camera-retro"></span>
-                    <h3>Lorem dolor tempus</h3>
-                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+                    <!span class="icon solid featured fa-camera-retro"></span-->
+                    <h3>Bachelors in Information Technology</h3>
+                    <h4>Osmania University, India</h4>
+                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
                 </section>
             </div>
-            <div class="col-4 col-6-medium col-12-small">
+            <!--div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="icon featured fa-thumbs-up"></span>
                     <h3>Feugiat posuere</h3>
                     <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
                 </section>
-            </div>
+            </div-->
         </div>
-        <footer>
+        <!--footer>
             <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
             <a href="#projects" class="button large scrolly">See some of my recent work</a>
-        </footer>
+        </footer-->
     </div>
 </article>
 
