--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <!span class="icon solid featured fa-camera-retro"></span-->
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
-                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
+                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures, Object Oriented Programming</p>
                 </section>
             </div>
             <!--div class="col-4 col-6-medium col-12-small">
