--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <nav id="nav">
     <ul class="container">
         <li><a href="#Tahseen">Tahseen</a></li>
+        <li><a href="#experiences">Experiences</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -35,7 +36,7 @@
                     <h1>Hi. I'm <strong>Tahseen Hameed</strong>.</h1>
                 </header>
                 <p>*Cool things about Me*</p>
-                <!--p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p-->
+                <p>Skilled in <strong>Java</strong>, <strong>Python</strong></p>
                 <!--a href="#work" class="button large scrolly">Learn about what I do</a-->
             </div>
         </div>
@@ -43,12 +44,44 @@
 </article>
 
 <!-- education -->
+<article id="experiences" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Experiences</h2>
+            <p>*something cool*</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <!--span class="icon featured fa-comments"></span-->
+                    <h3>Analogic Corporation</h3>
+                    <h4>SWE Co-op</h4>
+                    <h5>Peabody, MA</h5>
+                    <p>*Brief Description of Project and skills*</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <!--span class="icon solid featured fa-camera-retro"></span-->
+                    <h3>NCR Corporation</h3>
+                    <h4>Software Engineer</h4>
+                    <h5>Hyderabad, India</h5>
+                    <p>*Brief Description of Project and skills*</p>
+                </section>
+            </div>
+        </div>
+    </div>
+</article>
+
+
+<!-- education -->
 <article id="education" class="wrapper style2">
     <div class="container">
-        <!--header>
-            <h2>Here's all the stuff I do.</h2>
-            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
-        </header-->
+        <header>
+            <h2>Education</h2>
+            <p>"Life without knowledge is death in disguise. "
+                            -Talib Kweil</p>
+        </header>
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
@@ -63,7 +96,7 @@
                     <!span class="icon solid featured fa-camera-retro"></span-->
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
-                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures, Object Oriented Programming</p>
+                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
                 </section>
             </div>
             <!--div class="col-4 col-6-medium col-12-small">
@@ -85,8 +118,9 @@
 <article id="projects" class="wrapper style3">
     <div class="container">
         <header>
-            <h2>Here’s some stuff I made recently.</h2>
-            <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+            <h2>Projects</h2>
+            <p>"You can do anything you set your mind to."
+                            -Benjamin Franklin</p>
         </header>
         <div class="row">
             <div class="col-4 col-6-medium col-12-small">
