--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <div class="container">
         <header>
             <h2>Experiences</h2>
-            <p>*something cool*</p>
+            <p>"Life without knowledge is death in disguise. "
+                -Talib Kweil</p>
         </header>
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
@@ -62,6 +63,14 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
+                    <!--span class="icon featured fa-comments"></span-->
+                    <h3>Masters in Computer Science</h3>
+                    <h4>Northeastern University, Boston</h4>
+                    <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
                     <!--span class="icon solid featured fa-camera-retro"></span-->
                     <h3>NCR Corporation</h3>
                     <h4>Software Engineer</h4>
@@ -69,13 +78,22 @@
                     <p>*Brief Description of Project and skills*</p>
                 </section>
             </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <!span class="icon solid featured fa-camera-retro"></span-->
+                    <h3>Bachelors in Information Technology</h3>
+                    <h4>Osmania University, India</h4>
+                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
+                </section>
+            </div>
+
         </div>
     </div>
 </article>
 
 
 <!-- education -->
-<article id="education" class="wrapper style2">
+<!--article id="education" class="wrapper style2">
     <div class="container">
         <header>
             <h2>Education</h2>
@@ -112,7 +130,7 @@
             <a href="#projects" class="button large scrolly">See some of my recent work</a>
         </footer-->
     </div>
-</article>
+</article-->
 
 <!-- Projects-->
 <article id="projects" class="wrapper style3">
