--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <ul class="container">
         <li><a href="#Tahseen">Tahseen</a></li>
         <li><a href="#experiences">Experiences</a></li>
-        <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
@@ -103,7 +102,7 @@
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!--span class="icon featured fa-comments"></span-->
+                    <span class="icon featured fa-comments"></span>
                     <h3>Masters in Computer Science</h3>
                     <h4>Northeastern University, Boston</h4>
                     <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
@@ -111,13 +110,13 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!span class="icon solid featured fa-camera-retro"></span-->
+                    <span class="icon solid featured fa-camera-retro"></span>
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
                     <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
                 </section>
             </div>
-            <!--div class="col-4 col-6-medium col-12-small">
+            <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="icon featured fa-thumbs-up"></span>
                     <h3>Feugiat posuere</h3>
