--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <!--span class="icon featured fa-comments"></span-->
                     <h3>Masters in Computer Science</h3>
                     <h4>Northeastern University, Boston</h4>
-                    <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
+                    <p>*Add Relevant Courses*</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
@@ -79,13 +79,21 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!span class="icon solid featured fa-camera-retro"></span-->
+                    <!--span class="icon solid featured fa-camera-retro"></span-->
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
-                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
+                    <p>*Add Relevant Courses*</p>
                 </section>
             </div>
-
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <!--span class="icon solid featured fa-camera-retro"></span-->
+                    <h3>Tata Consultancy Services</h3>
+                    <h4>Software Engineer Intern</h4>
+                    <h5>Hyderabad, India</h5>
+                    <p>*Brief Description of Project and skills*</p>
+                </section>
+            </div>
         </div>
     </div>
 </article>
