--- a/index.html
+++ b/index.html
@@ -57,29 +57,30 @@
                     <h3>Analogic Corporation</h3>
                     <h4>SWE Co-op</h4>
                     <h5>Peabody, MA</h5>
-                    <p>*Brief Description of Project and skills*</p>
+                    <p>*Brief Description of work experience*</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!--span class="icon featured fa-comments"></span-->
+                    <span class="icon featured fa fa-graduation-cap"></span>
                     <h3>Masters in Computer Science</h3>
                     <h4>Northeastern University, Boston</h4>
-                    <p>*Add Relevant Courses*</p>
+                    <p>*Brief Description of Relevant Courses*</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!--span class="icon solid featured fa-camera-retro"></span-->
+                    <span class="icon featured fa fa-briefcase"></span>
                     <h3>NCR Corporation</h3>
                     <h4>Software Engineer</h4>
                     <h5>Hyderabad, India</h5>
-                    <p>*Brief Description of Project and skills*</p>
+                    <p>*Brief Description of work experience*</p>
                 </section>
             </div>
+            <!--
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!--span class="icon solid featured fa-camera-retro"></span-->
+                    <span class="icon solid featured fa-camera-retro"></span>
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
                     <p>*Add Relevant Courses*</p>
@@ -87,13 +88,14 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!--span class="icon solid featured fa-camera-retro"></span-->
+                    <span class="icon solid featured fa-camera-retro"></span>
                     <h3>Tata Consultancy Services</h3>
                     <h4>Software Engineer Intern</h4>
                     <h5>Hyderabad, India</h5>
                     <p>*Brief Description of Project and skills*</p>
                 </section>
             </div>
+        -->
         </div>
     </div>
 </article>
@@ -257,7 +259,7 @@
         </div>
         <footer>
             <ul id="copyright">
-                <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>&copy; your name here</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </footer>
     </div>
