--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <!--span class="icon featured fa-comments"></span-->
+                    <span class="fa fa-briefcase"></span>
                     <h3>Analogic Corporation</h3>
                     <h4>SWE Co-op</h4>
                     <h5>Peabody, MA</h5>
@@ -62,7 +62,7 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="icon featured fa fa-graduation-cap"></span>
+                    <span class="fa fa-graduation-cap"></span>
                     <h3>Masters in Computer Science</h3>
                     <h4>Northeastern University, Boston</h4>
                     <p>*Brief Description of Relevant Courses*</p>
@@ -70,7 +70,7 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="icon featured fa fa-briefcase"></span>
+                    <span class="fa fa-briefcase"></span>
                     <h3>NCR Corporation</h3>
                     <h4>Software Engineer</h4>
                     <h5>Hyderabad, India</h5>
