--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
-    <title>Miniport by HTML5 UP</title>
+    <title>Tech Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -18,6 +13,7 @@
     <ul class="container">
         <li><a href="#Tahseen">Tahseen</a></li>
         <li><a href="#experiences">Experiences</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
@@ -35,14 +31,13 @@
                     <h1>Hi. I'm <strong>Tahseen Hameed</strong>.</h1>
                 </header>
                 <p>*Cool things about Me*</p>
-                <p>Skilled in <strong>Java</strong>, <strong>Python</strong></p>
-                <!--a href="#work" class="button large scrolly">Learn about what I do</a-->
+                <p>Skilled in <strong>Java</strong>, <strong>Python</strong>, <strong>C++</strong></p>
             </div>
         </div>
     </div>
 </article>
 
-<!-- education -->
+<!-- experiences -->
 <article id="experiences" class="wrapper style2">
     <div class="container">
         <header>
@@ -53,7 +48,7 @@
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="fa fa-briefcase fa-2x"></span>
+                    <span class="fa fa-briefcase fa-3x"></span>
                     <h3>Analogic Corporation</h3>
                     <h4>SWE Co-op</h4>
                     <h5>Peabody, MA</h5>
@@ -62,47 +57,20 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="fa fa-graduation-cap fa-3x"></span>
-                    <h3>Masters in Computer Science</h3>
-                    <h4>Northeastern University, Boston</h4>
-                    <p>*Brief Description of Relevant Courses*</p>
-                </section>
-            </div>
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="fa fa-briefcase fa-4x"></span>
+                    <span class="fa fa-briefcase fa-3x"></span>
                     <h3>NCR Corporation</h3>
                     <h4>Software Engineer</h4>
                     <h5>Hyderabad, India</h5>
                     <p>*Brief Description of work experience*</p>
                 </section>
             </div>
-            <!--
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="icon solid featured fa-camera-retro"></span>
-                    <h3>Bachelors in Information Technology</h3>
-                    <h4>Osmania University, India</h4>
-                    <p>*Add Relevant Courses*</p>
-                </section>
-            </div>
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="icon solid featured fa-camera-retro"></span>
-                    <h3>Tata Consultancy Services</h3>
-                    <h4>Software Engineer Intern</h4>
-                    <h5>Hyderabad, India</h5>
-                    <p>*Brief Description of Project and skills*</p>
-                </section>
-            </div>
-        -->
         </div>
     </div>
 </article>
 
 
 <!-- education -->
-<!--article id="education" class="wrapper style2">
+<-article id="education" class="wrapper style2">
     <div class="container">
         <header>
             <h2>Education</h2>
@@ -112,7 +80,7 @@
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="icon featured fa-comments"></span>
+                    <span class="fa fa-graduation-cap fa-3x"></span>
                     <h3>Masters in Computer Science</h3>
                     <h4>Northeastern University, Boston</h4>
                     <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
@@ -120,26 +88,15 @@
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
-                    <span class="icon solid featured fa-camera-retro"></span>
+                    <span class="fa fa-graduation-cap fa-3x"></span>
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
                     <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
                 </section>
             </div>
-            <div class="col-4 col-6-medium col-12-small">
-                <section class="box style1">
-                    <span class="icon featured fa-thumbs-up"></span>
-                    <h3>Feugiat posuere</h3>
-                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-                </section>
-            </div-->
         </div>
-        <!--footer>
-            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-            <a href="#projects" class="button large scrolly">See some of my recent work</a>
-        </footer-->
     </div>
-</article-->
+</article>
 
 <!-- Projects-->
 <article id="projects" class="wrapper style3">
@@ -153,85 +110,32 @@
             <div class="col-4 col-6-medium col-12-small">
                 <article class="box style2">
                     <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                    <h3><a href="#">Magna feugiat</a></h3>
-                    <p>Ornare nulla proin odio consequat.</p>
+                    <h3><a href="#">Project 1</a></h3>
+                    <p>*Briefly Describe Project</p>
                 </article>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <article class="box style2">
-                    <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                    <h3><a href="#">Veroeros primis</a></h3>
-                    <p>Ornare nulla proin odio consequat.</p>
+                    <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                    <h3><a href="#">Project 2</a></h3>
+                    <p>*Briefly Describe Project</p>
                 </article>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <article class="box style2">
-                    <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                    <h3><a href="#">Lorem ipsum</a></h3>
-                    <p>Ornare nulla proin odio consequat.</p>
-                </article>
-            </div>
-            <div class="col-4 col-6-medium col-12-small">
-                <article class="box style2">
-                    <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                    <h3><a href="#">Tempus dolore</a></h3>
-                    <p>Ornare nulla proin odio consequat.</p>
-                </article>
-            </div>
-            <div class="col-4 col-6-medium col-12-small">
-                <article class="box style2">
-                    <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                    <h3><a href="#">Feugiat aliquam</a></h3>
-                    <p>Ornare nulla proin odio consequat.</p>
-                </article>
-            </div>
-            <div class="col-4 col-6-medium col-12-small">
-                <article class="box style2">
-                    <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-                    <h3><a href="#">Sed amet ornare</a></h3>
-                    <p>Ornare nulla proin odio consequat.</p>
+                    <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                    <h3><a href="#">Project 3</a></h3>
+                    <p>*Briefly Describe Project</p>
                 </article>
             </div>
         </div>
-        <footer>
-            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-            <a href="#contact" class="button large scrolly">Get in touch with me</a>
-        </footer>
     </div>
 </article>
 
 <!-- Contact -->
 <article id="contact" class="wrapper style4">
     <div class="container medium">
-        <!--header>
-            <h2>Have me make stuff for you.</h2>
-            <p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
-        </header-->
         <div class="row">
-            <!--div class="col-12">
-                <form method="post" action="#">
-                    <div class="row">
-                        <div class="col-6 col-12-small">
-                            <input type="text" name="name" id="name" placeholder="Name" />
-                        </div>
-                        <div class="col-6 col-12-small">
-                            <input type="text" name="email" id="email" placeholder="Email" />
-                        </div>
-                        <div class="col-12">
-                            <input type="text" name="subject" id="subject" placeholder="Subject" />
-                        </div>
-                        <div class="col-12">
-                            <textarea name="message" id="message" placeholder="Message"></textarea>
-                        </div>
-                        <div class="col-12">
-                            <ul class="actions">
-                                <li><input type="submit" value="Send Message" /></li>
-                                <li><input type="reset" value="Clear Form" class="alt" /></li>
-                            </ul>
-                        </div>
-                    </div>
-                </form>
-            </div-->
             <div class="col-12">
                 <hr />
                 <h3>Find me on ...</h3>
