--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 <!-- education -->
-<-article id="education" class="wrapper style2">
+<article id="education" class="wrapper style2">
     <div class="container">
         <header>
             <h2>Education</h2>
