--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <div class="container">
         <header>
             <h2>Experiences</h2>
-            <p>"Life without knowledge is death in disguise. "
-                -Talib Kweil</p>
+            <p>“ Nothing ever becomes real till it is experienced. ” -John Keats</p>
         </header>
         <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
