--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <span class="fa fa-graduation-cap fa-3x"></span>
                     <h3>Bachelors in Information Technology</h3>
                     <h4>Osmania University, India</h4>
-                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures</p>
+                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures, Software Engineering</p>
                 </section>
             </div>
         </div>
