--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Nav -->
 <nav id="nav">
     <ul class="container">
-        <li><a href="#Tahseen">Tahseen</a></li>
+        <li><a href="#Zara">Tahseen</a></li>
         <li><a href="#experiences">Experiences</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -20,7 +20,7 @@
 </nav>
 
 <!-- Home -->
-<article id="Tahseen" class="wrapper style1">
+<article id="Zara" class="wrapper style1">
     <div class="container">
         <div class="row">
             <div class="col-4 col-5-large col-12-medium">
@@ -28,10 +28,10 @@
             </div>
             <div class="col-8 col-7-large col-12-medium">
                 <header>
-                    <h1>Hi. I'm <strong>Tahseen Hameed</strong>.</h1>
+                    <h1>Hi. I'm <strong>Zara Naeem</strong>.</h1>
                 </header>
                 <p>*Cool things about Me*</p>
-                <p>Skilled in <strong>Java</strong>, <strong>Python</strong>, <strong>C++</strong></p>
+                <p>Skilled in <strong>Python</strong>, <strong>R</strong>, <strong>SQL</strong></p>
             </div>
         </div>
     </div>
@@ -139,12 +139,12 @@
                 <hr />
                 <h3>Find me on ...</h3>
                 <ul class="social">
-                    <li><a href="https://github.com/tahseenkhan31" class="icon brands fa-github"><span class="label">Github</span></a></li>
-                    <li><a href="https://twitter.com/tahseen31khan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/tahseen-hameed/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/zaranaeem" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/zara-naeem/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 
                     <!--
                     <li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
+                    <li><a href="https://twitter.com/tahseen31khan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
                     <li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
                     <li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
