--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+E<!DOCTYPE HTML>
 <html>
 <head>
     <title>Tech Portfolio</title>
@@ -48,18 +48,18 @@
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-briefcase fa-3x"></span>
-                    <h3>Analogic Corporation</h3>
-                    <h4>SWE Co-op</h4>
-                    <h5>Peabody, MA</h5>
+                    <h3>General Electric Aviation</h3>
+                    <h4>XN Project Sponsor</h4>
+                    <h5>Data Analytics workflow on KNIME</h5>
                     <p>*Brief Description of work experience*</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-briefcase fa-3x"></span>
-                    <h3>NCR Corporation</h3>
-                    <h4>Software Engineer</h4>
-                    <h5>Hyderabad, India</h5>
+                    <h3>Practera</h3>
+                    <h4>Experiential Project Sponsor</h4>
+                    <h5>Cambridge, MA</h5>
                     <p>*Brief Description of work experience*</p>
                 </section>
             </div>
@@ -80,17 +80,17 @@
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-graduation-cap fa-3x"></span>
-                    <h3>Masters in Computer Science</h3>
+                    <h3>Masters in Analytics</h3>
                     <h4>Northeastern University, Boston</h4>
-                    <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
+                    <p>Relevant Courses: Data Modeling, Predictive Analytics, Data Mining (in R and Python), Data Warehousing and SQL, Concentration in Statistical Modeling</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-graduation-cap fa-3x"></span>
-                    <h3>Bachelors in Information Technology</h3>
-                    <h4>Osmania University, India</h4>
-                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures, Software Engineering</p>
+                    <h3>Bachelors in Business Administration</h3>
+                    <h4>Institute of Business Administration, Karachi</h4>
+                    <p>Relevant Courses: Financial Management, Probability and Statistics, Strategic Management, Marketing, Economic Development, Media Studies, Human Behaviour, Organizational Behaviour</p>
                 </section>
             </div>
         </div>
