--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ E<!DOCTYPE HTML>
 <!-- Nav -->
 <nav id="nav">
     <ul class="container">
-        <li><a href="#Zara">Tahseen</a></li>
+        <li><a href="#Zara">Zara</a></li>
         <li><a href="#experiences">Experiences</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
