--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ E<!DOCTYPE HTML>
                 <header>
                     <h1>Hi. I'm <strong>Zara Naeem</strong>.</h1>
                 </header>
-                <p>*Cool things about Me*</p>
+                <p>*I am a data analyst inspired by art and nature, looking to make breakthroughs in health systems with my skills in data science*</p>
                 <p>Skilled in <strong>Python</strong>, <strong>R</strong>, <strong>SQL</strong></p>
             </div>
         </div>
@@ -140,7 +140,7 @@ E<!DOCTYPE HTML>
                 <h3>Find me on ...</h3>
                 <ul class="social">
                     <li><a href="https://github.com/zaranaeem" class="icon brands fa-github"><span class="label">Github</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/zara-naeem/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://https://www.linkedin.com/in/zara-naeem-42090454/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 
                     <!--
                     <li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
